target/fabric8/deployment.yml
apiVersion: v1
kind: Deployment
metadata:
  name: product-catalog-lab3
spec:
  template:
    spec:
      containers:
        -
          resources:
            requests:
              cpu: "0.2"
              memory: 256Mi
            limits:
              cpu: "1.0"
              memory: 256Mi
